science wow.cydsn/BUILD.log
--------------- Build Started: 03/01/2022 18:19:27 Project: science wow, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
The code generation step is up to date.
arm-none-eabi-gcc.exe -mcpu=cortex-m0 -mthumb -I. -IGenerated_Source\PSoC4 -Wa,-alh=.\CortexM0\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM0\ARM_GCC_541\Debug\main.o
main.c: In function 'main':
main.c:47:13: warning: 'current' is used uninitialized in this function [-Wuninitialized]
         int poll = PollAndReceiveCANPacket(current); 
             ^
arm-none-eabi-gcc.exe -mcpu=cortex-m0 -mthumb -I. -IGenerated_Source\PSoC4 -Wa,-alh=.\CortexM0\ARM_GCC_541\Debug/servo.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c servo.c -o .\CortexM0\ARM_GCC_541\Debug\servo.o
servo.c:49:6: error: conflicting types for 'set_servo_continuous'
 void set_servo_continuous(int servoID, int direction, int speed, int miliDegrees){
      ^
In file included from servo.c:17:0:
servo.h:19:6: note: previous declaration of 'set_servo_continuous' was here
 void set_servo_continuous(int servoID,int direction,int speed);
      ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Build Failed: 03/01/2022 18:19:30 ---------------
